Update to newer java usage